# eafitdistools

./: .gitignore  Makefile  Makefile.am~  README.md  config.status  configure.ac  configure.ac~
man/: Makefile  Makefile.am  edtcabinst.1  edtctrl.1  edtgetrepos.1  edtinit.1  edtrc.5  edtrrinitscript.1  edtsetevalunit.1
src/: Makefile  Makefile.am  Makefile.am~  Makefile~  edtcabinst.sh  edtctrl.sh  edtgetrepos.sh  edtinit.sh  edtinit.sh~  edtrrinitscript.sh  edtsetevalunit.sh  etgetrepos.sh
